# fastapi-simple-jwt-auth

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  logging_config.json  pyproject.toml  pytest.ini
src/: config.py  db.py  main.py
src/api/v1/: auth.py
src/api/v1/dependencies/: auth.py  db.py
src/api/v1/examples/: auth.py
src/api/v1/responses/: auth.py
src/extra/examples/: users_fl.json  users_up.json
src/gunicorn/: app.py  run.py
src/migrations/: env.py
src/migrations/versions/: 2025_09_04_1255-27240a0aed87_auth_created_token_model.py  2025_09_04_1309-59305c210eb2_auth_created_users_model_added_type_and_.py  2025_09_04_1337-f9baadf337da_auth_forgot_to_add_unique_constraint_.py  2025_09_04_2034-1f5ae2446596_auth_fix_not_nullable_values_in_user_.py  2025_12_29_1832-8093419d4e91_removed_unused_fields.py
src/models/: __init__.py  auth.py  base.py
src/models/mixins/: primary_key.py  timing.py
src/repos/: auth.py  base.py
src/repos/mappers/: mappers.py
src/schemas/: auth.py
src/services/: auth.py  base.py
src/utils/: db_manager.py  db_tools.py  exceptions.py  logging.py
tests/: conftest.py  test_hashing.py  test_login.py  test_profile.py  test_register.py
